streaming/experiments/owncast/owncast.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncast
  template:
    metadata:
      labels:
        app: owncast
    spec:
      containers:
      - name: owncast
        image: docker.io/gabekangas/owncast:0.0.13
        ports:
          - name: web
            containerPort: 8080
          - name: stream
            containerPort: 1935
        resources:
          requests:
            cpu: 0m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: owncast
spec:
  selector:
    app: owncast
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stream
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.3.13
  selector:
    app: owncast
  ports:
  - name: stream
    protocol: TCP
    port: 1935
    targetPort: 1935
